--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav {
   position: fixed;
   top: 0;
   z-index: 100;
-  /* transition: ease-in-out 0.5; */
+  transition: ease-in-out 0.5s;
 }
 .nav {
   display: flex;
@@ -62,6 +62,7 @@ nav {
   height: 80px;
   width: 100%;
   align-items: center;
+  padding: 0 40px;
 }
 .nav .logo {
   height: 80px;
@@ -73,6 +74,7 @@ nav {
 
 .enlaces-header {
   font-weight: 300;
+  transition: ease-in-out 0.5s;
 }
 
 .nav .enlaces-header a {
@@ -223,7 +225,6 @@ nav {
 /* question */
 
 .question {
-  width: 100%;
   height: 600px;
   display: flex;
   justify-content: space-between;
@@ -259,6 +260,8 @@ nav {
 .text-question {
   margin: 0 0 0 30px;
 }
+
+/* results  */
 
 .results {
   background: #ffb28d;
@@ -306,16 +309,13 @@ nav {
 }
 
 .results-text h4 {
-  /* color:#1d273b; */
   font-size: 40px;
-  
 }
 .results-text p {
-  /* color: #1d273b; */
   margin: 20px 0;
   font-weight: 300;
 }
-.results-text a{
+.results-text a {
   text-decoration: none;
   display: inline-block;
   color: #1d273b;
@@ -325,8 +325,289 @@ nav {
   cursor: pointer;
 }
 
-.results-text a:hover{
+.results-text a:hover {
   box-shadow: 0 4px 10px rgba(10, 29, 48, 0.26);
   color: #fff;
   border: 1px solid #fff;
+}
+
+/* services */
+
+.services {
+  display: flex;
+  justify-content: space-between;
+}
+
+.services img {
+  width: 500px;
+}
+
+.box-skills {
+  margin: 30px 30px 0 0;
+}
+
+.box-skills h4 {
+  font-size: 24px;
+  background: #f2f2f2;
+  width: 350px;
+  border-radius: 6px;
+  padding: 10px 10px 0 15px;
+  margin-bottom: 10px;
+}
+
+.box-skills i {
+  color: #e03e52;
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+/* footer  */
+
+footer {
+  background: #f2f2f2;
+  padding: 60px 0;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: auto;
+}
+
+.partFooter {
+  text-align: center;
+}
+
+.partFooter h4 {
+  color: #1d273b;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+.partFooter img {
+  width: 70%;
+}
+
+.partFooter a {
+  display: block;
+  text-decoration: none;
+  color: #5d6678;
+  font-weight: 300;
+  transition: color 0.3s ease-in-out;
+  margin-bottom: 10px;
+}
+
+.partFooter a:hover {
+  color: #e03e52;
+}
+
+.social-media i {
+  font-size: 20px;
+  display: inline-block;
+  color: #5d6678;
+  border: 1px solid #5d6678;
+  width: 40px;
+  height: 40px;
+  line-height: 30px;
+  border-radius: 50%;
+  text-align: center;
+  transition: all ease-in-out 0.3s;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.social-media i:hover {
+  color: white;
+  background-color: #e03e52;
+  border-color: #e03e52;
+}
+
+/* breakpoints responsive */
+
+@media (max-width: 880px) {
+  .title,
+  .text-question h1 {
+    font-size: 45px;
+  }
+  .content-header {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 720px;
+  }
+
+  .content-header img {
+    width: 400px;
+  }
+
+  .text-header {
+    margin: 0;
+  }
+
+  .article {
+    width: 45%;
+  }
+
+  .question {
+    height: 720px;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .question img {
+    width: 400px;
+  }
+
+  .content-result {
+    flex-direction: column-reverse;
+  }
+
+  .results-text a {
+    margin-bottom: 60px;
+  }
+  .numbers,
+  .results-text {
+    width: 100%;
+  }
+
+  .services {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .box-skills {
+    margin-bottom: 40px;
+  }
+
+  .box-skills h4 {
+    width: 500px;
+  }
+
+  .services img {
+    width: 400px;
+  }
+
+  footer {
+    justify-content: space-evenly;
+  }
+
+  .partFooter {
+    width: 40%;
+    margin-bottom: 40px;
+  }
+
+  .social-media i {
+    margin: 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .title,
+  .content-header h1,
+  .text-question h1 {
+    font-size: 35px;
+  }
+
+  .content-header {
+    height: 650px;
+  }
+
+  .content-header img {
+    width: 350px;
+  }
+
+  .nav {
+    padding: 0 10px;
+  }
+
+  .enlaces-header {
+    position: fixed;
+    background: #e1eec3; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to right,
+      #f05053,
+      #e1eec3
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to right,
+      #f05053,
+      #e1eec3
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    clip-path: circle(0% at 100% 0);
+  }
+
+  .nav .menudos {
+    -webkit-clip-path: circle(150% at 100% 0);
+    clip-path: circle(150% at 100% 0);
+  }
+
+  .nav .enlaces-header a {
+    color: #fff;
+    
+  }
+
+  .hamburguer {
+    display: block;
+  }
+
+  .article {
+    width: 95%;
+  }
+
+  .question img {
+    width: 350px;
+  }
+}
+
+@media (max-width: 320px) {
+  .question img,
+  .content-header img,
+  .services img {
+    width: 200px;
+  }
+  .box-skills h4 {
+    width: 100%;
+    margin-left: 25px;
+  }
+
+  .numbers .number {
+    width: 95%;
+  }
+}
+
+@media (max-width: 426px) {
+  .question img,
+  .content-header img,
+  .services img {
+    width: 150px;
+  }
+
+  .box-skills h4 {
+    width: 300px;
+    margin-left: 30px;
+  }
+
+  .numbers .number {
+    width: 95%;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  .partFooter {
+    width: 100%;
+  }
+
+  .social-media i {
+    margin: 10px;
+  }
 }
